<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/fragment_transaction_detail_textview_from_account_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/fragment_transaction_detail_from_account_number_text"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/fragment_transaction_detail_textview_from_bank_bic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_transaction_detail_textview_from_account_number"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/fragment_transaction_detail_from_bank_bic_text"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/fragment_transaction_detail_separator_line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_below="@id/fragment_transaction_detail_textview_from_bank_bic"
        android:src="@drawable/separator_line" />

    <TextView
        android:id="@+id/fragment_transaction_detail_textview_to_account_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_transaction_detail_separator_line1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:text="@string/fragment_transaction_detail_to_account_number_text"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/fragment_transaction_detail_textview_to_bank_bic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_transaction_detail_textview_to_account_number"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/fragment_transaction_detail_to_bank_bic_text"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/fragment_transaction_detail_separator_line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_below="@id/fragment_transaction_detail_textview_to_bank_bic"
        android:src="@drawable/separator_line" />

    <TextView
        android:id="@+id/fragment_transaction_detail_textview_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_transaction_detail_separator_line2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:text="@string/fragment_transaction_detail_amount_text"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/fragment_transaction_detail_textview_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_transaction_detail_textview_amount"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/fragment_transaction_detail_date_text"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/fragment_transaction_detail_separator_line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_below="@id/fragment_transaction_detail_textview_date"
        android:src="@drawable/separator_line" />

    <TextView
        android:id="@+id/fragment_transaction_detail_textview_reference_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_transaction_detail_separator_line3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:text="@string/fragment_transaction_detail_reference_number_text"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/fragment_transaction_detail_textview_transaction_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_transaction_detail_textview_reference_number"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/fragment_transaction_detail_transaction_type_text"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/fragment_transaction_detail_textview_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_transaction_detail_textview_transaction_type"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/fragment_transaction_detail_message_text"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp" />



</RelativeLayout>