<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/fragment_atm_simulation_textview_choose_bank_card_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_atm_simulation_choose_bank_card_header_text"
        android:textColor="@color/colorPrimaryText"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/fragment_atm_simulation_spinner_choose_bank_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_atm_simulation_textview_choose_bank_card_header"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/custom_spinner"
        android:minHeight="32dp" />

    <TextView
        android:id="@+id/fragment_atm_simulation_textview_country_limit_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_atm_simulation_spinner_choose_bank_card"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_atm_simulation_country_limit_header_text"
        android:textColor="@color/colorPrimaryText"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/fragment_atm_simulation_spinner_country_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_atm_simulation_textview_country_limit_header"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/custom_spinner"
        android:minHeight="32dp" />

    <TextView
        android:id="@+id/fragment_atm_simulation_textview_amount_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_atm_simulation_spinner_country_limit"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_atm_simulation_amount_text"
        android:textColor="@color/colorPrimaryText"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/fragment_atm_simulation_edittext_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_atm_simulation_textview_amount_header"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/custom_edittext"
        android:gravity="start"
        android:inputType="numberDecimal"
        android:maxLength="14"
        android:maxLines="1"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/fragment_atm_simulation_button_withdraw"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/fragment_atm_simulation_edittext_amount"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_selector"
        android:text="@string/fragment_atm_simulation_withdraw_text"
        android:textSize="24sp"
        android:textAllCaps="false"
        android:textColor="@color/colorSecondaryText" />

    <Button
        android:id="@+id/fragment_atm_simulation_button_deposit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/fragment_atm_simulation_button_withdraw"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_selector"
        android:text="@string/fragment_atm_simulation_deposit_text"
        android:textSize="24sp"
        android:textAllCaps="false"
        android:textColor="@color/colorSecondaryText" />




</RelativeLayout>